<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2017 Red Hat, Inc.
  ~
  ~ Licensed to the Apache Software Foundation (ASF) under one or more
  ~ contributor license agreements. See the NOTICE file distributed with
  ~ this work for additional information regarding copyright ownership.
  ~ The ASF licenses this file to You under the Apache License, Version 2.0
  ~ (the "License"); you may not use this file except in compliance with
  ~ the License. You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.redhat.cli-java</groupId>
    <artifactId>cli-java</artifactId>
    <version>1.2.2-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <modules>
        <module>bom</module>
        <module>parent</module>
        <module>tests</module>

        <module>lib</module>
        <module>jmslib</module>
        <module>jakartalib</module>

        <module>cli</module>
        <module>cli-activemq</module>
        <module>cli-artemis-jms</module>
        <module>cli-paho-java</module>
        <module>cli-protonj2</module>
        <module>cli-qpid-jms</module>
        <module>cli-qpid-jms-1x</module>

        <module>cli-activemq-jmx</module>

        <module>broker</module>

        <module>interop-tests</module>
    </modules>

</project>
